--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,54 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 </head>
 <body>
-	teste
+	<header>
+		<h1>"..é daí ... eu sou messias não faço milagre.."</h1>
+		<h2>Carta aos Brasileiro - n.01</h2>	
+	</header>
+	<section>
+		<p>
+		Eu não sou petista e votei nesse homem , quero o Lula preso, pelos seus atos criminosos.
+		Mas Sabendo Sr.Presidente, que foi eleito para cuidar do povo, de um povo pobre, de um povo que em sua maioria sem instrução é influenciável pelos seu líderes, de um povo que somente quer levar a vida com seu trabalho, e com sua família...
+		</p>
+		<p>
+			Falar isso é cometer no mínimo desrespeito, por esse trabalhador 
+			que faleceu, que teve seu pai, mãe, filho, esposa, marido, morto(a)
+			por essa doença.
+		</p>
+		<p>
+			Caso o Sr. não acredite nela, é um direito, mas não influencie como líder
+			as pessoas que não tem a informação completa do que é a covid-19
+		</p>
+		<p>
+			Seja consciente de sua responsabilidade como líder, as pessoas o seguem...
+		</p>
+		<p>
+			Já imaginou como se sente um médico ou enfermeira vendo seu líder
+			não dando importancia a essa doença, doença que tirou a vida de colegas deles,
+			doença que tirou eles do convívio de sua família, doença faz eles todos
+			os dias se lutar pelo paciente e as vezes perder a luta, engolir a
+			tristeza, limpar a maca e renovar a esperança no próximo paciente.
+		</p>
+		<p>
+			Eu gostaria que meu líder se colocasse no lugar da gente que sente medo
+			e continua pegando o onibus, da gente que está respirando mal sem poder ver quem eu amo
+			da gente que só ve um caixão lacrado, da gente que confiou em você.
+		</p>
+		<p>
+			Se o Sr. não tem esse capacidade? Me pergunto porque tem gente que o apóia?
+			por que esse é o mínimo que um ser humano precisa ter para ser admirado.
+			Me pergunto também porque o Sr. continua...o que te move? DE que forma quer ser lembrado..
+		</p>	
+		<p>
+			Rogo a Deus que essa mensagem chegue e toque o coração de alguém!!
+			Pois me sinto tão só depois de suas palavras...
+		</p>
+		<p>
+			Sou somente um brasileiro, cristão e que não quer perder a esperança...
+		</p>
+	</section>
+	<footer>
+		2020 - umbrasileiro.github.io
+	</footer>
 </body>
 </html>
