Correção no texto: e daí..

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 		<section>
 			<p>
 			Eu não sou petista e votei nesse homem , quero o Lula preso, pelos seus atos criminosos.
-			Mas Sabendo Sr.Presidente, que foi eleito para cuidar do povo, de um povo pobre, de um povo que em sua maioria sem instrução é influenciável pelos seu líderes, de um povo que somente quer levar a vida com seu trabalho, e com sua família...
+			Mas Sr.Presidente, saiba que foi eleito para cuidar do povo, de um povo pobre, de um povo que em sua maioria sem instrução é influenciável pelos seu líderes, de um povo que somente quer levar a vida com seu trabalho, e com sua família...
 			</p>
 			<p>
 				Falar isso é cometer no mínimo desrespeito, por esse trabalhador 
@@ -24,23 +24,22 @@
 				por essa doença.
 			</p>
 			<p>
-				Caso o Sr. não acredite nela, é um direito, mas não influencie como líder
-				as pessoas que não tem a informação completa do que é a covid-19
+				Caso o Sr. não acredite nela, é um direito pessoal, mas não influencie como líder
+				as pessoas que não tem a informação completa do que é a covid-19.
 			</p>
 			<p>
-				Seja consciente de sua responsabilidade como líder, as pessoas o seguem...
+				Seja consciente de sua responsabilidade como líder, as pessoas o seguem.
 			</p>
 			<p>
-				Já imaginou como se sente um médico ou enfermeira vendo seu líder
-				não dando importancia a essa doença, doença que tirou a vida de colegas deles,
-				doença que tirou eles do convívio de sua família, doença faz eles todos
-				os dias se lutar pelo paciente e as vezes perder a luta, engolir a
+				Já imaginou como se sente um médico ou enfermeira assistindo seu líder
+				não dando importancia a essa doença, doença que tirou a vida de colegas ,
+				doença que os tirou do convívio de sua família, doença que os faz todos
+				os dias lutar pelos seus pacientes e muitas vezes perder essa luta, engolir a
 				tristeza, limpar a maca e renovar a esperança no próximo paciente.
 			</p>
 			<p>
 				Eu gostaria que meu líder se colocasse no lugar da gente que sente medo
-				e continua pegando o onibus, da gente que está respirando mal sem poder ver quem eu amo
-				da gente que só ve um caixão lacrado, da gente que confiou em você.
+				e continua pegando o onibus, da gente que está respirando mal sem poder ver sentir o toque de um familiar, da gente que só ve um caixão lacrado, da gente que confiou em você.
 			</p>
 			<p>
 				Se o Sr. não tem esse capacidade? Me pergunto porque tem gente que o apóia?
