Correção no texto: e daí..

--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,7 @@
 		</header>
 		<section>
 			<p>
-			Eu não sou petista e votei nesse homem , quero o Lula preso, pelos seus atos criminosos.
-			Mas Sr.Presidente, saiba que foi eleito para cuidar do povo, de um povo pobre, de um povo que em sua maioria sem instrução é influenciável pelos seu líderes, de um povo que somente quer levar a vida com seu trabalho, e com sua família...
+			Eu não sou petista e votei nesse homem, mas Sr.Presidente, saiba que foi eleito para cuidar do povo, de um povo pobre, de um povo que em sua maioria sem instrução é influenciável pelos seu líderes, de um povo que somente quer levar a vida com seu trabalho, e com sua família...
 			</p>
 			<p>
 				Falar isso é cometer no mínimo desrespeito, por esse trabalhador 
